# secureCRTAi

./: .gitignore  README.en.md  README.md  README.zh.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: FILE_TRANSFER_PLAN.md  PRODUCT_PLAN.md
src/: App.css  App.tsx  api.ts  dangerous.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  ai.rs  forward.rs  hostkeys.rs  keys.rs  lib.rs  localfs.rs  main.rs  portable.rs  sftp.rs  sftp_cli.rs  store.rs  transfer.rs  vault.rs
src-tauri/src/terminal/: local.rs  mod.rs  ssh.rs
src/components/: AiPanel.tsx  CommandPalette.tsx  ContextMenu.tsx  Dialogs.tsx  Icons.tsx  Resizer.tsx  SessionDialog.tsx  SessionSidebar.tsx  SettingsDialog.tsx  SftpCliView.tsx  SftpDualView.tsx  SftpFileTable.tsx  SftpView.tsx  StatusBar.tsx  TerminalView.tsx  ToolsDialog.tsx  TransferPanel.tsx
