[package]
name = "termai"
version = "0.1.0"
description = "TermAI - AI-native remote terminal manager"
authors = ["termai"]
edition = "2021"

[lib]
name = "termai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
async-trait = "0.1"

# terminal
portable-pty = "0.9"
# 用 ring 后端替代默认 aws-lc-rs，避免 Windows 上的 NASM 依赖
russh = { version = "0.62", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.3"
# 密钥生成：与 russh 内嵌同一版本，仅补开 getrandom feature（feature 叠加，类型一致）
ssh-key = { version = "=0.7.0-rc.11", features = ["ed25519", "getrandom"] }
tauri-plugin-dialog = "2"

# vault / crypto
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
dirs = "6"
trash = "5"

# ai
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
